# server

./: .gitignore  Makefile.am  README  configure.ac  tlserver.pc.in
src/: Makefile.am  main.c  server.c  server.h
template/: c  h
